extra-yamls/demo-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-http-route
  namespace: default
spec:
  parentRefs:
  # - name: istio-ingress
  #   namespace: istio-system
  - name: agentgateway
    namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: demo
      kind: Service
      port: 80
